@@ -1,3 +1,9 @@
+2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in, include/pqxx/result.hxx, src/binarystring.cxx,
+ src/connection_base.cxx, src/cursor.cxx, src/largeobject.cxx,
+ src/pipeline.cxx, src/result.cxx, src/statement_parameters.cxx,
+ src/tablewriter.cxx, src/util.cxx:
+ - Fixed clang errors; mostly signedness issues.
 2011-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/unit/test_notification.cxx:
  - Eliminated some more use of already-committed nontransaction.
